style: updating colors variables

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -2,7 +2,8 @@ $white: #fff;
 $black: #000;
 $secondary: #be123c;
 $light_text: #9ca3af;
-$box_text: #111827;
+$footer_light_text: #6b7280;
+$dark_text: #111827;
 $light_border: #d1d5db;
 
 /* MEDIA SCREENS 
