--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -26,6 +26,16 @@ ul {
   display: none;
 }
 
+.header_hero {
+  width: 100%;
+  height: 70vh;
+  background-image: url("/svgs/hero_img.svg");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  color: $white;
+}
+
 /* -----------NAV/HEADER STYLES----------- */
 .nav {
   &_inner {
@@ -84,11 +94,13 @@ ul {
         width: 100%;
         outline: none;
         border: none;
+        background: transparent;
 
         &::placeholder {
           font-size: 1rem;
           font-weight: 400;
           line-height: 1.5rem;
+          color: $white;
         }
       }
 
@@ -137,6 +149,72 @@ ul {
         scale: 1;
       }
     }
+  }
+}
+
+/* -----------HERO STYLES----------- */
+.hero {
+  &_inner {
+    @include flex_center();
+    justify-content: space-around;
+    padding-top: 5rem;
+    flex-wrap: wrap;
+  }
+
+  &_left {
+    &_inner {
+      display: grid;
+      gap: 1rem;
+      h2 {
+        color: #fff;
+        font-size: 3rem;
+        font-weight: 700;
+        line-height: 3.5rem;
+      }
+
+      .rating {
+        &_sec {
+          @include flex_center();
+          justify-content: flex-start;
+          gap: 2.5rem;
+        }
+
+        &_left,
+        &_right {
+          @include flex_center();
+          gap: 0.5rem;
+          font-size: 0.75rem;
+          font-weight: 400;
+          line-height: 0.75rem;
+        }
+      }
+
+      .quotes_sec {
+        font-size: 0.875rem;
+        font-weight: 500;
+        line-height: 1.125rem;
+        width: 100%;
+        max-width: 19rem;
+      }
+
+      button {
+        display: flex;
+        padding: 0.375rem 1rem;
+        align-items: center;
+        gap: 0.5rem;
+        border-radius: 0.375rem;
+        background: $secondary;
+        font-size: 0.875rem;
+        font-weight: 700;
+        line-height: 1.5rem;
+        text-transform: uppercase;
+        width: fit-content;
+      }
+    }
+  }
+
+  &_right {
+    width: 40%;
   }
 }
 
