styles: updating variables styles

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,3 +9,11 @@
 .container_main {
   padding: 1rem;
 }
+
+/* ----------------MOVIE SECTION---------------- */
+
+.movie {
+  &_sec {
+    border: 1px solid red;
+  }
+}
