--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -246,6 +246,16 @@ ul {
       font-style: normal;
       font-weight: 400;
       line-height: 1.5rem;
+      @include flex_center();
+      gap: 0.5rem;
+      cursor: pointer;
+      transition: all 0.4s ease-in-out;
+      scale: 0.9;
+
+      &:hover {
+        scale: 1.1;
+        font-weight: 600;
+      }
     }
   }
 }
