--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -72,24 +72,26 @@ ul {
   }
 
   &_middle {
-    &_inner {
-      display: none;
+    display: none;
+    @media screen and (min-width: 768px) {
+      display: block;
+    }
 
-      @media screen and (min-width: 576px) {
+    &_inner {
+      @media screen and (min-width: 768px) {
+        position: relative;
         @include flex_center();
-        width: 16rem;
+        width: 25rem;
         padding: 0.3rem 0.6rem;
         gap: 0.5rem;
         border-radius: 0.5rem;
         border: 2px solid $light_border;
       }
 
-      @media screen and (min-width: 768px) {
-        width: 25rem;
-      }
       @media screen and (min-width: 992px) {
         width: 32rem;
       }
+
       input {
         width: 100%;
         outline: none;
@@ -106,6 +108,80 @@ ul {
 
       span {
         font-size: 1.5rem;
+      }
+    }
+
+    &_dropdown {
+      position: absolute;
+      display: grid;
+      place-items: center;
+      width: 16rem;
+      height: 100%;
+      max-height: 30vh;
+      overflow: scroll;
+      z-index: 100;
+
+      @media screen and (min-width: 768px) {
+        width: 25rem;
+      }
+      @media screen and (min-width: 992px) {
+        width: 32rem;
+      }
+    }
+
+    &_loading_sec {
+      @include flex_center();
+      gap: 0.5rem;
+    }
+  }
+
+  &_movie_container {
+    display: grid;
+    gap: 1rem;
+  }
+
+  &_movie_card {
+    &_inner {
+      @include flex_center();
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 2rem;
+      padding: 1rem;
+      backdrop-filter: blur(10px);
+      scale: 0.9;
+      transition: all 0.4s ease-in-out;
+      cursor: pointer;
+
+      &:hover {
+        border: 1px solid $white;
+        scale: 1;
+      }
+    }
+
+    &_left {
+      width: 4rem;
+      aspect-ratio: 1/1;
+    }
+
+    &_right {
+      display: grid;
+      gap: 1rem;
+      h4 {
+        font-size: 1.125rem;
+        font-weight: 700;
+        line-height: normal;
+      }
+
+      p {
+        color: $light_text;
+        font-size: 0.9rem;
+        font-weight: 600;
+        line-height: normal;
+
+        span {
+          font-weight: 900;
+          font-size: 1rem;
+        }
       }
     }
   }
