--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 @import "./colors";
 @import "./variables";
 
@@ -228,6 +230,129 @@ ul {
   }
 }
 
+/* -----------SIDEBAR STYLES----------- */
+.sidebar {
+  &_inner {
+    border-top-right-radius: 1rem;
+    overflow: hidden;
+    display: grid;
+    place-items: left;
+    padding: 3rem 0;
+    border-radius: 0rem 2.8125rem 2.8125rem 0rem;
+    border: 1px solid $dark_text;
+    background: #fff;
+    height: 100vh;
+    width: 100%;
+    max-width: 14rem;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+
+    ul {
+      display: grid;
+      width: 100%;
+      gap: 1rem;
+
+      li {
+        @include flex_center();
+        gap: 0.3rem;
+        padding-inline: 2.5rem 0;
+        width: 100%;
+        justify-content: flex-start;
+        color: $sidebar_menu;
+        font-size: 1.25rem;
+        font-weight: 600;
+        line-height: normal;
+        height: 5rem;
+        flex-shrink: 0;
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
+        transition: all 0.4s ease-in-out;
+        scale: 0.9;
+
+        &:hover,
+        &.active {
+          color: $secondary;
+          background: rgba(190, 18, 60, 0.1);
+          border-right: 6px solid $secondary;
+          scale: 1;
+        }
+
+        img {
+          width: 1.5rem;
+          aspect-ratio: 1/1;
+        }
+      }
+    }
+  }
+
+  &_logo {
+    padding: 0 1.5rem;
+    img {
+      width: 2.5rem;
+    }
+    @include flex_center();
+    gap: 1rem;
+    font-size: 1.3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.5rem;
+  }
+
+  &_bottom {
+    display: grid;
+    gap: 1.5rem;
+
+    &_quotes {
+      display: grid;
+      place-content: center;
+      gap: 0.5rem;
+      margin: 0 1.5rem;
+      padding: 1.5rem 1rem 0.5rem 1rem;
+      border-radius: 1.25rem;
+      border: 1px solid rgba(190, 18, 60, 0.7);
+      background: rgba(248, 231, 235, 0.4);
+
+      p {
+        &:nth-child(1) {
+          color: rgba(51, 51, 51, 0.8);
+          font-size: 0.8rem;
+          font-weight: 600;
+          line-height: 1.3rem;
+        }
+        &:nth-child(2) {
+          color: $sidebar_menu;
+          font-size: 0.7rem;
+          font-weight: 500;
+          line-height: normal;
+        }
+      }
+
+      button {
+        width: 7rem;
+        height: 1.875rem;
+        flex-shrink: 0;
+        border-radius: 1.875rem;
+        background: rgba(190, 18, 60, 0.2);
+        color: $secondary;
+        font-size: 0.75rem;
+        font-weight: 500;
+        line-height: normal;
+        cursor: pointer;
+        margin-top: 1rem;
+        opacity: 0.8;
+        scale: 1;
+        transition: all 0.4s ease-in-out;
+
+        &:hover {
+          opacity: 1;
+          scale: 1.1;
+          font-weight: 600;
+        }
+      }
+    }
+  }
+}
+
 /* -----------HERO STYLES----------- */
 .hero {
   &_inner {
@@ -345,6 +470,22 @@ ul {
         font-weight: 600;
       }
     }
+  }
+}
+
+/* -----------MOVIE/[ID] STYLES----------- */
+
+.movie_id {
+  &_sec {
+    width: 100%;
+    height: 100%;
+  }
+
+  &_inner {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 2.5rem;
   }
 }
 
