style: updating colors variables

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -5,6 +5,7 @@ $light_text: #9ca3af;
 $footer_light_text: #6b7280;
 $dark_text: #111827;
 $light_border: #d1d5db;
+$sidebar_menu: #666;
 
 /* MEDIA SCREENS 
 @media screen and (min-width: 1200px) {
