style: updating colors variables

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -6,6 +6,8 @@ $footer_light_text: #6b7280;
 $dark_text: #111827;
 $light_border: #d1d5db;
 $sidebar_menu: #666;
+$sidebar_menu_list: #404040;
+$overview_text: #333;
 
 /* MEDIA SCREENS 
 @media screen and (min-width: 1200px) {
