--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -487,6 +487,65 @@ ul {
     align-items: flex-start;
     gap: 2.5rem;
   }
+
+  &_details {
+    width: 100%;
+    height: 100%;
+    max-width: 75%;
+    padding: 3rem 1rem;
+
+    &_image {
+      width: 100%;
+      height: 35rem;
+      flex-shrink: 0;
+      border-radius: 1.25rem;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &_text_sec {
+      display: grid;
+      gap: 2rem;
+      padding: 1.5rem;
+    }
+
+    &_nav {
+      @include flex_center();
+      justify-content: flex-start;
+      gap: 1.5rem;
+      color: $sidebar_menu_list;
+      font-size: 1.5rem;
+      line-height: normal;
+    }
+
+    &_overview {
+      &_inner {
+        h3 {
+          font-size: 1.5rem;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 3.5rem;
+          text-transform: capitalize;
+        }
+
+        p {
+          width: 100%;
+          height: 100%;
+          max-width: 60%;
+          color: $overview_text;
+          font-size: 1.25rem;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 1.8rem;
+          padding: 0 0.8rem;
+        }
+      }
+    }
+  }
 }
 
 /* -----------FOOTER STYLES----------- */
