--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -119,6 +119,48 @@
   }
 }
 
+// WATCH_TRAILER
+.watch_trailer {
+  width: fit-content;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  display: grid;
+  place-items: center;
+  gap: 1rem;
+  scale: 0.8;
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+
+  &:hover {
+    scale: 1;
+  }
+
+  img {
+    width: 6rem !important;
+    background: rgba(255, 255, 255, 0.35);
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    padding: 1rem;
+    backdrop-filter: blur(2px);
+    border: 1px solid rgba(232, 232, 232, 0.2);
+  }
+
+  p {
+    color: #e8e8e8;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    font-size: 1.3rem;
+    font-weight: 600;
+    line-height: normal;
+
+    @media screen and (min-width: 400px) {
+      font-size: 1.5rem;
+    }
+  }
+}
+
 // DIAMOND_DOT
 
 .diamond_dot {
@@ -126,4 +168,9 @@
   aspect-ratio: 1/1;
   background: $black;
   rotate: 45deg;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
 }
