--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -174,3 +174,20 @@
     display: block;
   }
 }
+
+.heart_icon {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 10;
+
+  img {
+    width: 3rem;
+    background: rgba(255, 255, 255, 0.35);
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    padding: 0.5rem;
+    backdrop-filter: blur(9px);
+    border: 1px solid rgba(232, 232, 232, 0.2);
+  }
+}
